--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-speech-recognition": "^4.0.1",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1"
   },
